app/home.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .preview-section {
        @apply w-full h-screen min-h-[420px] bg-gray-200 overflow-clip;
        @apply flex flex-col justify-center items-center gap-6 p-2;
    }

    .analyze-section {
        @apply w-full h-screen bg-gray-200 px-8 overflow-clip gap-4;
        @apply flex flex-col justify-center items-center;
    }

    .insight-section {
        @apply w-full h-screen bg-blue-600 overflow-clip;
        @apply flex flex-col justify-center items-center gap-6 p-2;
    }

    .insight-title {
        @apply text-3xl sm:text-5xl xl:text-[52px] font-bold text-white;
        @apply text-center sm:leading-tight tracking-[-1px];
    }

    .insight-text {
        @apply text-lg sm:text-2xl xl:text-[32px];
        @apply text-white text-center font-light;
        @apply tracking-[-0.5px] sm:leading-relaxed;
    }

    .prediction-section {
        @apply w-full h-screen bg-white p-2 overflow-clip;
        @apply flex flex-col justify-center items-center;
    }

    .prediction-text {
        @apply my-8 xl:my-0;
        @apply flex flex-col gap-4 w-full;
        @apply items-center xl:items-start lg:w-2/3 xl:w-2/5 xl:min-w-[400px];
    }

    .prediction-title {
        @apply text-3xl sm:text-5xl xl:text-[52px];
        @apply font-bold leading-normal sm:leading-tight xl:leading-[62.05px];
        @apply text-center xl:text-start;
    }

    .prediction-swiper-container {
        @apply w-full sm:w-2/3 lg:w-1/2 mb-8 xl:mb-0;
        @apply flex gap-12 justify-center lg:justify-start;
        @apply items-center flex-wrap md:flex-nowrap;
    }

    .personalization-section {
        @apply w-full h-screen bg-blue-600 p-2 overflow-clip;
        @apply flex flex-row justify-center items-center;
    }

    .personalization-container {
        @apply w-full md:w-11/12 xl:w-9/12 gap-24;
        @apply lg:gap-0 flex flex-wrap justify-center lg:justify-between items-center;
    }

    .personalization-text {
        @apply flex flex-col gap-4 w-full;
        @apply items-center lg:items-start lg:w-1/2 xl:w-2/5
    }

    .personalization-title {
        @apply text-white text-3xl sm:text-5xl xl:text-[52px];
        @apply font-bold leading-normal xl:leading-[62.05px] sm:leading-tight;
        @apply text-center lg:text-start;
    }

    .personalization-describe {
        @apply text-white text-lg sm:text-xl xl:text-[26px];
        @apply xl:leading-[40px] font-medium;
        @apply lg:mt-6 lg:mb-28 text-center md:text-start;
    }

    .personalization-image-container {
        @apply w-full sm:w-3/5 lg:w-1/2 2xl:w-[715px];
        @apply justify-center lg:justify-end invisible;
    }

    .assert-recoble-section {
        @apply w-full h-screen bg-black overflow-clip;
        @apply flex flex-col justify-start items-center;
    }

    .assert-recoble-container {
        @apply bg-[#d8e1e8] w-full h-full sm:h-3/4 md:h-4/5 xl:h-[96%] xl:max-h-[716px] xl:mt-6 rounded-2xl;
        @apply lg:py-8 flex flex-wrap md:flex-nowrap;
        @apply justify-between gap-0 lg:gap-6 overflow-clip;
    }

    .assert-recoble-text {
        @apply w-full md:w-1/2 flex flex-col gap-8;
        @apply justify-center items-center pt-8 px-4 md:pt-0;
    }

    .assert-recoble-title {
        @apply text-2xl md:text-3xl xl:text-5xl xl:text-[48px] font-[400px];
        @apply leading-normal sm:leading-tight;
        @apply text-center lg:text-start;
    }
}

